added navBar, search and login

--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <script defer src="./scripts/script.js"></script>
 </head>
 <body>
-    
+    <!-- ____________________navBar_____________________ -->
+    <nav class="navBar">
+        <div class="navText">Home</div>
+        <div class="navText">Blog</div>
+        <div class="navText">Video</div>
+        <div class="navText">Gallery</div>
+        <div class="navText">Help</div>
+    </nav>
+
+    <!-- _____________quick search and member login____________________ -->
+    <div id="underNav">
+    <fieldset id="search">
+        <label> Quick search
+            <input type="search" name="" id="" placeholder="Quick Search" > 
+        </label>
+    </fieldset>
+
+    <Fieldset id="login">
+        <form id="topForm" action="">
+            <label id="mLogin"> Member login</label><br>
+            <label> <input id="username" type="text" placeholder=" Username" minlength="6"  title="One word with no numbers or special characters." required></label>
+            
+            <label > <input type="password" placeholder=" Password" minlength="6" maxlength="16" required></label> 
+
+            <input type="submit"><br>
+            <div id="rMe">
+            <label > Remember me?<input type="checkbox" ></label></div>
+        </form>
+    </Fieldset>
+    </div>
+
+    <!-- ___________________image________________ -->
+    <img src="" alt="">
+
+
+    <!-- __________________blog___________________ -->
+    <div>
+        <h1>Latest Blog Post</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nisi, vitae, perspiciatis nam non officiis culpa aspernatur autem sunt cumque repudiandae! Debitis assumenda consequuntur odit officia mollitia laudantium explicabo hic beatae ratione quis? Quo veniam iste eum quisquam ipsa! Tenetur doloremque laboriosam eos enim maxime soluta vitae asperiores saepe porro, magni quod at! Dolorem molestias fugiat nulla pariatur assumenda aspernatur?</p>
+    </div>
+
+
+
+
+
 </body>
 </html>
