adding style to all h1 in JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- ____________________navBar_____________________ -->
     <nav class="navBar">
-        <div class="navText">Home</div>
+        <div class="navText">Forum</div>
         <div class="navText">Blog</div>
         <div class="navText">Video</div>
         <div class="navText">Gallery</div>
@@ -45,13 +45,19 @@
 
     <!-- __________________blog___________________ -->
     <div>
-        <h1>Latest Blog Post</h1>
+        <h2>Important Updates</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nisi, vitae, perspiciatis nam non officiis culpa aspernatur autem sunt cumque repudiandae! Debitis assumenda consequuntur odit officia mollitia laudantium explicabo hic beatae ratione quis? Quo veniam iste eum quisquam ipsa! Tenetur doloremque laboriosam eos enim maxime soluta vitae asperiores saepe porro, magni quod at! Dolorem molestias fugiat nulla pariatur assumenda aspernatur?</p>
     </div>
 
+    <div></div>
+        <h2>Latest Blog Post</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nisi, vitae, perspiciatis nam non officiis culpa aspernatur autem sunt cumque repudiandae! Debitis assumenda consequuntur odit officia mollitia laudantium explicabo hic beatae ratione quis? Quo veniam iste eum quisquam ipsa! Tenetur doloremque laboriosam eos enim maxime soluta vitae asperiores saepe porro, magni quod at! Dolorem molestias fugiat nulla pariatur assumenda aspernatur?</p>
+    </div>
 
-
-
+    <div id="">
+        <label>Comment:</label><br>
+        <input type="text" style="height: 150px; width: 500px;">
+    </div>
 
 </body>
 </html>
