--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <!-- ____________________navBar_____________________ -->
     <nav class="navBar">
-        <div class="navText">Forum</div>
-        <div class="navText">Blog</div>
-        <div class="navText">Video</div>
-        <div class="navText">Gallery</div>
-        <div class="navText">Help</div>
+        <a href="" class="navText">Forum</a>
+        <a href="" class="navText">Blog</a>
+        <a href="" class="navText">Video</a>
+        <a href="" class="navText">Gallery</a>
+        <a href="" class="navText">Help</a>
+        <a href=""></a>
     </nav>
 
     <!-- _____________quick search and member login____________________ -->
@@ -54,10 +55,19 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nisi, vitae, perspiciatis nam non officiis culpa aspernatur autem sunt cumque repudiandae! Debitis assumenda consequuntur odit officia mollitia laudantium explicabo hic beatae ratione quis? Quo veniam iste eum quisquam ipsa! Tenetur doloremque laboriosam eos enim maxime soluta vitae asperiores saepe porro, magni quod at! Dolorem molestias fugiat nulla pariatur assumenda aspernatur?</p>
     </div>
 
-    <div id="">
-        <label>Comment:</label><br>
-        <input type="text" style="height: 150px; width: 500px;">
+    <div>
+        <label><h2>Comments</h2></label><br>
+        <div class="commentSection">
+            <textarea id="comment" rows="15" cols="50" style="height: 150px; width: 500px;"></textarea><br>
+        <button id="commentBtn">Submit</button>
+        </div>
+        <div id="allComment">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate id, in dolore dignissimos sequi veritatis, deserunt ipsa voluptates possimus alias quis cum dolor eligendi ipsum dicta ad minima quam? Iure!</p>
+        </div>
     </div>
+
+
+
 
 </body>
 </html>
